force-app/main/default/objects/Fitbit_Month__c/Fitbit_Month__c.object-meta.xml
<CustomObject>
    <label>Fitbit Month</label>
    <nameField>
        <displayFormat>FM{00000}</displayFormat>
        <label>Fitbit Month</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fitbit Months</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>