force-app/main/default/objects/Fitbit_Month__c/fields/Average_Calories__c.field-meta.xml
<CustomField>
    <fullName>Average_Calories__c</fullName>
    <formula>FLOOR(Monthly_Calories__c / (
  /* Find the total amount of days in a month */
  DAY(IF(
    MONTH( Date__c ) = 12,
    DATE( YEAR( Date__c ), 12, 31 ),
    DATE( YEAR( Date__c ), MONTH ( Date__c ) + 1, 1 ) - 1 
  ))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the average calories burnt for the month in total.  Will update each time a new Fitbit Day is added.</inlineHelpText>
    <label>Average Calories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>