force-app/main/default/objects/Fitbit_Month__c/fields/Average_Distance__c.field-meta.xml
<CustomField>
    <fullName>Average_Distance__c</fullName>
    <formula>FLOOR(Monthly_Distance__c / (
  /* Find the total amount of days in a month */
  DAY(IF(
    MONTH( Date__c ) = 12,
    DATE( YEAR( Date__c ), 12, 31 ),
    DATE( YEAR( Date__c ), MONTH ( Date__c ) + 1, 1 ) - 1 
  ))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>