force-app/main/default/objects/Fitbit_Month__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>We&#39;re only interested in the month and year from this value.  This will define the Month and Year values on the record.  The day of the month is not important.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>