force-app/main/default/objects/Fitbit_Month__c/fields/Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Date_Range__c</fullName>
    <formula>TEXT(Month__c) &amp; &quot;, &quot; &amp; TEXT(Year__c)</formula>
    <label>Date Range</label>
    <type>Text</type>
</CustomField>