force-app/main/default/objects/Fitbit_Month__c/fields/Fitbit_User__c.field-meta.xml
<CustomField>
    <fullName>Fitbit_User__c</fullName>
    <label>Fitbit User</label>
    <referenceTo>Fitbit_Summary__c</referenceTo>
    <relationshipLabel>Fitbit Months</relationshipLabel>
    <relationshipName>Fitbit_Months</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>