force-app/main/default/objects/Fitbit_Month__c/fields/Monthly_Calories__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Calories__c</fullName>
    <label>Monthly Calories</label>
    <summarizedField>Fitbit_Day__c.Calories__c</summarizedField>
    <summaryForeignKey>Fitbit_Day__c.Fitbit_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>