force-app/main/default/objects/Fitbit_Month__c/fields/Monthly_Distance__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Distance__c</fullName>
    <label>Monthly Distance</label>
    <summarizedField>Fitbit_Day__c.Distance__c</summarizedField>
    <summaryForeignKey>Fitbit_Day__c.Fitbit_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>