force-app/main/default/objects/Fitbit_Month__c/fields/Monthly_Floors__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Floors__c</fullName>
    <label>Monthly Floors</label>
    <summarizedField>Fitbit_Day__c.Floors__c</summarizedField>
    <summaryForeignKey>Fitbit_Day__c.Fitbit_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>