force-app/main/default/objects/Fitbit_Month__c/fields/Monthly_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Minutes__c</fullName>
    <label>Monthly Minutes</label>
    <summarizedField>Fitbit_Day__c.Total_Minutes__c</summarizedField>
    <summaryForeignKey>Fitbit_Day__c.Fitbit_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>