force-app/main/default/objects/Fitbit_Month__c/fields/Monthly_Steps__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Steps__c</fullName>
    <label>Monthly Steps</label>
    <summarizedField>Fitbit_Day__c.Steps__c</summarizedField>
    <summaryForeignKey>Fitbit_Day__c.Fitbit_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>